--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,10 +5,27 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>WebContent</title>
-    <script src="http://cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
+    <title>农村土地流转数字化监管系统</title>
+
+    <!-- <script src="http://cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
     <link rel="stylesheet" href="http://cdn.sencha.com/ext/gpl/4.2.1/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css">
-    <script type="text/javascript" src="app.js?_dc=1450343202037"></script>
+    <script type="text/javascript" src="app.js?_dc=1450343202037"></script> -->
+    
+	<script type="text/javascript"></script>
+	<link rel="stylesheet" href="http://localhost:8080/appLib/extjs/4.2.1/resources/ext-theme-classic/ext-theme-classic-all.css"/>
+	<script src="http://localhost:8080/appLib/extjs/4.2.1/ext-all.js"></script>
+	<script src="http://localhost:8080/appLib/extjs/4.2.1/ext-lang-zh_CN.js"></script>
+	
+	<link rel="stylesheet"	href="http://localhost:8080/appLib/arcjs/3.9/js/dojo/dijit/themes/claro/claro.css" />
+	<link rel="stylesheet"	href="http://localhost:8080/appLib/arcjs/3.9/js/esri/css/esri.css" />
+	<script>var dojoConfig = { parseOnLoad:true, isDebug:false };</script>
+	<script type="text/javascript" src="http://localhost:8080/appLib/arcjs/3.9/"></script>
+	
+	<script type="text/javascript" src="map/map.js"></script>
+	<script type="text/javascript" src="js/map.js"></script>
+	<script type="text/javascript" src="app.js"></script>
+	<link rel="stylesheet" type="text/css" href="map/agsmap.css" /> 
+
 </head>
 <body></body>
 </html>
