添加[规划][项目资料管理]初稿

--- a/src/entities/allentities.html
+++ b/src/entities/allentities.html
@@ -12,7 +12,7 @@
 		</p>
 		
 		<p>
-				<a href="cn/edu/bnu/land/model/UUserInfo.html" target="generalFrame">UUserInfo</a><br/>
+				<a href="cn/edu/bnu/land/model/Zbgmgl.html" target="generalFrame">Zbgmgl</a><br/>
 		</p>
 
 	</body>
