--- a/src/entities/cn/edu/bnu/land/model/entities.html
+++ b/src/entities/cn/edu/bnu/land/model/entities.html
@@ -13,7 +13,7 @@
 		
 			<p>
 				Entities<br/>
-					<a href="UUserInfo.html" target="generalFrame">UUserInfo</a><br/>
+					<a href="Zbgmgl.html" target="generalFrame">Zbgmgl</a><br/>
 			</p>
 
 	</body>
