--- a/src/tables/alltables.html
+++ b/src/tables/alltables.html
@@ -12,7 +12,7 @@
 		</p>
 		
 		<p>
-				<a href="tdlz.default/u_user_info.html" target="generalFrame">u_user_info</a><br/>
+				<a href="tdlz.default/zbgmgl.html" target="generalFrame">zbgmgl</a><br/>
 		</p>
 
 	</body>
