--- a/src/tables/tdlz.default/summary.html
+++ b/src/tables/tdlz.default/summary.html
@@ -35,8 +35,8 @@
 			<tbody>
 					<tr>
 						<td>
-							<a href="u_user_info.html" target="generalFrame">
-								u_user_info
+							<a href="zbgmgl.html" target="generalFrame">
+								zbgmgl
 							</a>
 						</td>
 					</tr>
