--- a/src/tables/tdlz.default/tables.html
+++ b/src/tables/tdlz.default/tables.html
@@ -12,7 +12,7 @@
 		</p>
 		
 		<p>
-				<a href="u_user_info.html" target="generalFrame">u_user_info</a><br/>
+				<a href="zbgmgl.html" target="generalFrame">zbgmgl</a><br/>
 		</p>
 
 	</body>
