添加[规划]部分的[项目资料展示]

--- a/src/entities/allentities.html
+++ b/src/entities/allentities.html
@@ -12,7 +12,7 @@
 		</p>
 		
 		<p>
-				<a href="cn/edu/bnu/land/model/Zbgmgl.html" target="generalFrame">Zbgmgl</a><br/>
+				<a href="cn/edu/bnu/land/model/Projection.html" target="generalFrame">Projection</a><br/>
 		</p>
 
 	</body>
