--- a/src/tables/alltables.html
+++ b/src/tables/alltables.html
@@ -12,7 +12,7 @@
 		</p>
 		
 		<p>
-				<a href="tdlz.default/zbgmgl.html" target="generalFrame">zbgmgl</a><br/>
+				<a href="tdlz.default/projection.html" target="generalFrame">projection</a><br/>
 		</p>
 
 	</body>
