--- a/src/tables/tdlz.default/summary.html
+++ b/src/tables/tdlz.default/summary.html
@@ -35,8 +35,8 @@
 			<tbody>
 					<tr>
 						<td>
-							<a href="zbgmgl.html" target="generalFrame">
-								zbgmgl
+							<a href="projection.html" target="generalFrame">
+								projection
 							</a>
 						</td>
 					</tr>
